@startuml class_diagram

package imdb_software_actors {

    package landing {
        class MainWindow
        class ActressListElement
        class ActressesListModel
        class AccessActressesListThread
    }

    package detail {
        class ActressDetail
        class DetailView
        class DetailViewModel
        class MoviesDataWorker
        class ActressAwardsDataWorker
    }
}

MainWindow o-- DetailView
MainWindow o-- ActressesListModel
MainWindow o-- ActressListElement: have 50
MainWindow o-- AccessActressesListThread
DetailView o-- ActressDetail
DetailView o-- ActressAwardsDataWorker
DetailView o-- MoviesDataWorker
DetailView o-- DetailViewModel
@enduml